- A tela de vendas funciona!! \o/

--- a/APICliente/Views/Home/Index.cshtml
+++ b/APICliente/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
     <thead>
         <tr>
             <td>Id</td>
+            <td>Id do cliente</td>
             <td>Valor Venda</td>
             <td>Data da Venda</td>
         </tr>
@@ -30,6 +31,7 @@
         {
         <tr>
             <td>@item.VendaId</td>
+            <td>@item.LimiteId</td>
             <td>@item.Venda</td>
             <td>@item.DataVenda</td>
         </tr>
